force-app/main/default/objects/MyFirstObject__c/MyFirstObject__c.object-meta.xml
<CustomObject
     >
    <description>MyFirstObject</description>
    <historyRetentionPolicy n1:nil="true" />
    <label>MyFirstObject</label>
    <nameField>
        <label>MyFirstObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MyFirstObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>