force-app/main/default/objects/MyFirstObject__c/fields/FO_Field_1__c.field-meta.xml
<CustomField>
    <fullName>FO_Field_1__c</fullName>
    <displayFormat>FO{000000000}</displayFormat>
    <label>FO Field 1</label>
    <type>AutoNumber</type>
</CustomField>