force-app/main/default/objects/MyFirstObject__c/fields/FO_Field_2__c.field-meta.xml
<CustomField>
    <fullName>FO_Field_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FO Field 2</label>
    <type>Checkbox</type>
</CustomField>