force-app/main/default/objects/MyFirstObject__c/fields/FO_Field_3__c.field-meta.xml
<CustomField>
    <fullName>FO_Field_3__c</fullName>
    <description>What&apos;s Your Name?</description>
    <formula>IF( Name == Name, Name, &quot;What Is My Name?!&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FO Field 3</label>
    <type>Text</type>
</CustomField>